# vscode_cmake_clang

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
_cmake/: CPMPackageManager.cmake
src/: Example.c  Example.cpp
